# circuitpython-as7343

./: AS7343.py  LICENSE  README.md  README.rst  README.rst.license  README.txt  as7343.py  code.py  pyproject.toml  requirements.txt  ruff.toml  setup.py
.github/workflows/: build.yml  release_gh.yml
adafruit_as7343/: __init__.py  as7343.py
as7343/: __init__.py
examples/: as7343_simpletest.py  as7343_test.py  as7343_test_SMUX.py  as7343_test_basic.py  as7343_test_measurement.py  as7343_test_power.py  as7343_test_thresholds.py  test_code.py  test_code_old.py
lib/: as7343.py
