# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2025 Joe Pardue for self
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "adafruit-circuitpython-as7343"
description = "Driver for the AS7343 multispectral sensor"
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "self", email = "joepardue47@gmail.com"}
]
urls = {Homepage = "https://github.com/joepardue/Adafruit_CircuitPython_as7343"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "as7343",
    "spectral",
    "sensor",
    "as7343",
    "I2C",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
# TODO: IF LIBRARY FILES ARE A PACKAGE FOLDER,
#       CHANGE `py_modules = ['...']` TO `packages = ['...']`
py-modules = ["adafruit_as7343"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
