# SPDX-FileCopyrightText: 2024 Joe Pardue
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "as7343"
description = "CircuitPython library for AS7343 spectral sensor"
authors = [
    {name = "Joe Pardue", email = "joepardue47@gmail.com"},
]
urls = {Homepage = "https://github.com/joepardue/circuitpython-as7343"}
keywords = [
    "adafruit",
    "as7343",
    "spectral",
    "sensor",
    "hardware",
    "micropython",
    "circuitpython",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "version"]

[tool.setuptools]
packages = ["as7343"]
